Prevent elements visible on hover from disappearing immediately

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -1618,7 +1618,7 @@ label > input[type='checkbox'].toggle {
 
 @media (hover: hover) {
 	.is-visible-on-hover {
-		transition: var(--is-visible-on-hover-transition, none);
+		transition: var(--is-visible-on-hover-transition, visibility 0s 0.5s linear);
 		visibility: var(--is-visible-on-hover-visibility, hidden);
 	}
 }
